--- a/App_Resources/Android/app.gradle
+++ b/App_Resources/Android/app.gradle
@@ -8,7 +8,7 @@
 android {  
   defaultConfig {  
     generatedDensities = []
-    applicationId = "__PACKAGE__" 
+    applicationId = "org.nativescript.App" 
     
     //override supported platforms
     // ndk {
