--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "App",
   "nativescript": {
-    "id": "org.nativescript.App"
+    "id": "org.nativescript.App",
+    "tns-android": {
+      "version": "6.3.1"
+    }
   },
   "version": "0.0.0",
   "scripts": {
@@ -27,9 +30,13 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
-    "core-js": "^2.6.9",
-    "nativescript-angular": "~8.20.0",
     "@nativescript/theme": "~2.2.1",
+    "@types/lodash-es": "^4.17.3",
+    "core-js": "^2.6.9",
+    "lodash": "^4.17.15",
+    "lodash-es": "^4.17.15",
+    "nativescript-angular": "~8.20.0",
+    "nativescript-ui-dataform": "^6.0.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.4.0",
     "tns-core-modules": "~6.3.0",
